validator_derive_tests/tests/compile-fail/range/wrong_type.stderr
error[E0599]: the method `validate_range` exists for struct `String`, but its trait bounds were not satisfied
 --> tests/compile-fail/range/wrong_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^ method cannot be called on `String` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/string.rs
  |
  | pub struct String {
  | -----------------
  | |
  | doesn't satisfy `String: ValidateRange<String>`
  | doesn't satisfy `_: ValidateRangeType`
  |
  = note: the following trait bounds were not satisfied:
          `String: validator::validation::range::ValidateRangeType`
          which is required by `String: ValidateRange<String>`
          `str: Sized`
          which is required by `str: ValidateRange<str>`
          `str: validator::validation::range::ValidateRangeType`
          which is required by `str: ValidateRange<str>`
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
